- In the help file for ActionMenu, "Remerge Unresolved Selected Files" -> "Remerge   Selected Files" to match the menu in program.

--- a/MacHgHelp/pgs/ActionMenu.html
+++ b/MacHgHelp/pgs/ActionMenu.html
@@ -190,7 +190,7 @@
 
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
-         <p>Remerge Unresolved Selected Files</p>
+         <p>Remerge Selected Files</p>
       </div>
       <div class="two-col-description-item-right">
          <p><strong>Mercurial command:</strong> <a href="http://www.selenic.com/mercurial/hg.1.html#resolve">resolve</a></p>
