- Minor rewording according to proof reader jhh.

--- a/MacHgHelp/Credits.html
+++ b/MacHgHelp/Credits.html
@@ -200,8 +200,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
 <h3>Mercurial</h3>
 
-<p class="licenseDetails">Mercurial is licensed under GPLv2+ which is <a href="http://www.gnu.org/licenses/gpl-2.0.txt">GPLv2</a> but adding the standard additional &quot;or any later version&quot; clause to the license</p>
-
+<p class="licenseDetails">Mercurial is licensed under GPLv2+ which is <a href="http://www.gnu.org/licenses/gpl-2.0.txt">GPLv2</a> together with the standard &quot;or any later version&quot; clause added to the license</p>
 <p class="licenseDetails"><a href="http://mercurial.selenic.com/wiki/License">http://mercurial.selenic.com/wiki/License</a></p>
 
 <p class="licenseDetails"><a href="http://mercurial.selenic.com/wiki/Relicensing">http://mercurial.selenic.com/wiki/Relicensing</a></p>
