- Add Tester Marko Kaning to credits - Add proofreader John Harris to credits. - Add ShellHere code to the credits.

--- a/MacHgHelp/Credits.html
+++ b/MacHgHelp/Credits.html
@@ -38,6 +38,20 @@
 <h1>A big thank you to the following:<br />
 </h1>
 
+<h2>MacHg Testing:</h2>
+<ul>
+	<li>Marko Käning</li>
+</ul>
+
+<h2>MacHg Documentation Proofreading:</h2>
+<ul>
+	<li>John Harris</li>
+</ul>
+
+
+<br />
+
+
 <h2>Mercurial:</h2>
 
 <p><strong>Mercurial and Extensions</strong>, Core Mercurial team:
@@ -82,6 +96,10 @@
 
 <p><strong>DTCPathView</strong>, Daniel Todd Currie, 2005:<br />
    <a href="http://los.dtcurrie.net/code/">http://los.dtcurrie.net/code/</a></p>
+
+<p><strong>ShellHere</strong>, John Daniel (Etresoft), March 2009:<br />
+   <a href="http://etresoft.org/shellhere.html">http://etresoft.org/shellhere.html</a></p>
+
 
 <p>&nbsp;</p>
 
@@ -196,6 +214,13 @@ The above copyright notice and this permission notice shall be included in all c
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 </p>
 
+<hr />
+<h3>Shell Here</h3>
+<p class="licenseDetails">
+
+Copyright (c) Etresoft 2009. All rights reserved.<br /><br />
+ShellHere is open source. Please hack it up if you like.
+</p>
 <hr />
 
 <h3>Mercurial</h3>
