- Add DBPrefsWindowController to the credits.

--- a/MacHgHelp/Credits.html
+++ b/MacHgHelp/Credits.html
@@ -100,6 +100,8 @@
 <p><strong>ShellHere</strong>, John Daniel (Etresoft), March 2009:<br />
    <a href="http://etresoft.org/shellhere.html">http://etresoft.org/shellhere.html</a></p>
 
+<p><strong>DBPrefsWindowController</strong>, Dave Batton, March 2007:<br />
+   <a href="http://www.mere-mortal-software.com/blog/details.php?d=%202007-03-11">http://www.mere-mortal-software.com/blog/details.php?d=%202007-03-11</a></p>
 
 <p>&nbsp;</p>
 
@@ -220,6 +222,15 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
 Copyright (c) Etresoft 2009. All rights reserved.<br /><br />
 ShellHere is open source. Please hack it up if you like.
+</p>
+
+<hr />
+<h3>DBPrefsWindowController</h3>
+<p class="licenseDetails">
+Copyright (c) 2007 Dave Batton. Some rights reserved.<br /><br />
+
+This work is licensed under a Creative Commons license:<br />
+<a href="http://creativecommons.org/licenses/by/3.0/">http://creativecommons.org/licenses/by/3.0/</a>
 </p>
 <hr />
 
