--- a/MacHgHelp/pgs/Shortcuts.html
+++ b/MacHgHelp/pgs/Shortcuts.html
@@ -76,5 +76,20 @@
       <p class="listparagraph"> <a href="help:anchor=AboutTheDifferencesView bookID=MacHg Help">The Differences View</a></p>
    </li>
 </ul>
+
+<h2>Drag and Drop</h2>
+<p>You can use drag and drop in:</p>
+<ul id="taskauxlistbulletedplain">
+   <li>
+      <p class="listparagraph"><a href="help:anchor=AboutRepositoryLists bookID=MacHg Help">The Repository List (<a href="help:anchor=AboutRepositoryLists bookID=MacHg Help">sidebar</a>)</a> to drag repositories in from the OSX Finder.</p>
+   </li>
+      <li>
+      <p class="listparagraph"><a href="help:anchor=AboutRepositoryLists bookID=MacHg Help">The Repository List (<a href="help:anchor=AboutRepositoryLists bookID=MacHg Help">sidebar</a>)</a> to reorder repositories in the sidebar.</p>
+   </li>
+   <li>
+      <p class="listparagraph">The Import Patches Sheet. You can add patches by directly dragging the patch files in from the OSX Finder.</p>
+   </li>
+</ul>
+
 </body>
 </html>
