--- a/MacHgHelp/xpgs/xall.html
+++ b/MacHgHelp/xpgs/xall.html
@@ -195,7 +195,7 @@ window.scrollBy(0,-60);
 <div class ="letterhead"><a name="R"></a>R</div>
 
 <div class="indexitem"><div class="indexentrytext"> 
-<a href="help:anchor=RemovingRepositoryItem bookID=MacHg Help">Removing Repository Itemes</a>
+<a href="help:anchor=RemovingRepositoryItem bookID=MacHg Help">Removing Repository Items</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 
@@ -218,6 +218,10 @@ window.scrollBy(0,-60);
 
 
 <div class ="letterhead"><a name="S"></a>S</div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=AboutSecurityAndPasswords bookID=MacHg Help">Security And Passwords</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=Shortcuts bookID=MacHg Help">Shortcuts</a>
