- Update credits with Rick Wong's graphic design contributions.

--- a/MacHgHelp/Credits.html
+++ b/MacHgHelp/Credits.html
@@ -35,15 +35,20 @@
 
 <p>&nbsp;</p>
 
-<h1>A big thank you to the following:<br />
+<h1>A big thank you to the following for their contributions to MacHg:<br />
 </h1>
 
-<h2>MacHg Testing:</h2>
+<h2>Testers:</h2>
 <ul>
 	<li>Marko Käning</li>
 </ul>
 
-<h2>MacHg Documentation Proofreading:</h2>
+<h2>Graphic Design Contributors:</h2>
+<ul>
+	<li>Rick Wong</li>
+</ul>
+
+<h2>Documentation Proofreaders:</h2>
 <ul>
 	<li>John Harris</li>
 </ul>
