- Get the about MacHg looking almost in the same theme as the latest changes to the icon   and backing pane. - Improve the version string reporting. - Add a radial gradient in the about MacHg as well... - Use a new MacHg graphic.

--- a/MacHgHelp/Credits.html
+++ b/MacHgHelp/Credits.html
@@ -35,20 +35,21 @@
 
 <p>&nbsp;</p>
 
-<h1>A big thank you to the following for their contributions to MacHg:<br />
-</h1>
+<h1>A big thank you to:</h1>
 
-<h2>Testers:</h2>
+<h2>MacHg contributors:</h2>
+ 
+<h3>Testers:</h3>
 <ul>
 	<li>Marko Käning</li>
 </ul>
 
-<h2>Graphic Design Contributors:</h2>
+<h3>Graphic Design Contributors:</h3>
 <ul>
 	<li>Rick Wong</li>
 </ul>
 
-<h2>Documentation Proofreaders:</h2>
+<h3>Documentation Proofreaders:</h3>
 <ul>
 	<li>John Harris</li>
 </ul>
