- Add a page on using an external version of Mercurial.  I still think this is a fairly   bad idea but many people have requested it.  I'll include it for now and see what   people think afterwords.

--- a/MacHgHelp/xpgs/xall.html
+++ b/MacHgHelp/xpgs/xall.html
@@ -54,7 +54,7 @@ window.scrollBy(0,-60);
 <span class="alphaletters"><a href="javascript:go('#R');">R</a></span>
 <span class="alphaletters"><a href="javascript:go('#S');">S</a></span>
 <span class="alphaletters">T</span>
-<span class="alphaletters">U</span>
+<span class="alphaletters"><a href="javascript:go('#U');">U</a></span>
 <span class="alphaletters">V</span>
 <span class="alphaletters">W</span>
 <span class="alphaletters">X</span>
@@ -225,6 +225,16 @@ window.scrollBy(0,-60);
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=Shortcuts bookID=MacHg Help">Shortcuts</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+
+
+
+
+<div class ="letterhead"><a name="U"></a>U</div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=UsingExternalMercurialVersion bookID=MacHg Help">Using an External Mercurial Version</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 
