- Fix a missing link which 'integrity' found after these pages were converted to web   pages.

--- a/MacHgHelp/pgs/RepositoryMenu.html
+++ b/MacHgHelp/pgs/RepositoryMenu.html
@@ -289,7 +289,7 @@
          <p><strong>Mercurial concept:</strong> <a href="http://www.selenic.com/mercurial/hg.1.html#init">init</a> / -</p>
          <p><strong>Available:</strong> Always.</p>
          <p><strong>Operation:</strong> Adds to the current document (a <strong>reference</strong> to) an existing local repository, or  <strong>creates</strong> a new local repository and adds (a reference to) this to the current document. Once you have added (the reference to) the repository to your MacHg document, you can manage this repository using the functionality of MacHg.</p>
-         <p><strong>Help: </strong><a href="help:anchor=AddingExistingLocalRepository bookID=MacHg Help">Adding an existing local repository</a>, <a href="CreatingANewLocalRepository copy.html">Creating a new local repository</a></p>
+         <p><strong>Help: </strong><a href="help:anchor=AddingExistingLocalRepository bookID=MacHg Help">Adding an existing local repository</a>, <a href="CreatingANewLocalRepository.html">Creating a new local repository</a></p>
       </div>
    </div>
 
