- Fix issue 121. Thanks tomcode!

--- a/MacHgHelp/pgs/QuickStart.html
+++ b/MacHgHelp/pgs/QuickStart.html
@@ -59,7 +59,7 @@
 
 <p>A <a href="help:anchor=AboutRepositories_ServerRepositories bookID=MacHg Help">server repository</a> is a repository that is resident on a server and not resident on your local machine. Since such a repository is on a server, MacHg can only record a <strong>reference</strong> to this remote repository. To work with a server repository you must first make a local clone of it on your machine, and then work with this local repository.</p>
 
-<p>To add an example server, choose Repository &gt; &quot;Add Server Repository...&quot;. In the ensuing dialog enter <strong>http://selenic.com/repo/hello</strong> in the Sever URL field, and enter an informative name in the short name field, eg. <em>hellorepo</em>. Click the button &quot;Bookmark Server&quot; to create the bookmark.</p>
+<p>To add an example server, choose Repository &gt; &quot;Add Server Repository...&quot;. In the ensuing dialog enter <strong>http://selenic.com/repo/hello</strong> in the Sever URL field, and enter an informative name in the short name field, eg. <em>hellorepo</em>. Click the button &quot;Add Server&quot; to create the bookmark.</p>
 
 <p>Now with the new server bookmark selected in the sidebar, choose Repository &gt; &quot;Clone...&quot;. In the clone sheet that has popped up, enter a local path where you are going to clone this server to, together with a new shortname and hit &quot;Clone Repository&quot;. This will give you a local clone of the example repository, <em>hello</em>, which is resident on selenic.com (the creators of Mercurial). Then you can modify the files in this repository and commit them. (You can't push changes from your repository to selenic's <em>hello</em> repository because you are not allowed write access to this repository.)</p>
 
