- Add Eugene Golushkov as one of the coders thanks to his nice contributions about text   attachments.

--- a/MacHgHelp/Credits.html
+++ b/MacHgHelp/Credits.html
@@ -38,6 +38,11 @@
 <h1>A big thank you to:</h1>
 
 <h2>MacHg contributors:</h2>
+
+<h3>Coders:</h3>
+<ul>
+	<li>Eugene Golushkov</li>
+</ul>
  
 <h3>Testers:</h3>
 <ul>
