- Add help topic about empty repositories. (Relates to issue 134)

--- a/MacHgHelp/pgs/xall.html
+++ b/MacHgHelp/pgs/xall.html
@@ -133,6 +133,10 @@ window.scrollBy(0,-60);
 <a href="help:anchor=EditingRepositoryHistory bookID=MacHg Help">Editing Repository History</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=AboutEmptyRepositories bookID=MacHg Help">Empty Repositories</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
 
 
 
